--- a/Source/Makefile
+++ b/Source/Makefile
@@ -123,4 +123,6 @@ APP_VERSION :=
 DRIVER_PATH = 
 
 ## Include the Makefile-Engine
-include $(BUILDHOME)/etc/makefile-engine
+DEVEL_DIRECTORY := \
+	$(shell findpaths -r "makefile_engine" B_FIND_PATH_DEVELOP_DIRECTORY)
+include $(DEVEL_DIRECTORY)/etc/makefile-engine
